--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
 		"memory_resource": "cpp",
 		"functional": "cpp",
 		"locale": "cpp",
-		"string_view": "cpp"
+		"string_view": "cpp",
+		"memory": "cpp"
 	}
 }
