--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,50 @@
 		"functional": "cpp",
 		"locale": "cpp",
 		"string_view": "cpp",
-		"memory": "cpp"
+		"memory": "cpp",
+		"__bit_reference": "cpp",
+		"__bits": "cpp",
+		"__debug": "cpp",
+		"__errc": "cpp",
+		"__mutex_base": "cpp",
+		"__nullptr": "cpp",
+		"__string": "cpp",
+		"__threading_support": "cpp",
+		"__tuple": "cpp",
+		"array": "cpp",
+		"atomic": "cpp",
+		"bit": "cpp",
+		"cctype": "cpp",
+		"chrono": "cpp",
+		"clocale": "cpp",
+		"cmath": "cpp",
+		"compare": "cpp",
+		"complex": "cpp",
+		"concepts": "cpp",
+		"cstdarg": "cpp",
+		"cstddef": "cpp",
+		"cstdint": "cpp",
+		"cstdio": "cpp",
+		"cstdlib": "cpp",
+		"cstring": "cpp",
+		"ctime": "cpp",
+		"cwchar": "cpp",
+		"cwctype": "cpp",
+		"exception": "cpp",
+		"ios": "cpp",
+		"iostream": "cpp",
+		"limits": "cpp",
+		"mutex": "cpp",
+		"new": "cpp",
+		"optional": "cpp",
+		"ratio": "cpp",
+		"stdexcept": "cpp",
+		"streambuf": "cpp",
+		"system_error": "cpp",
+		"tuple": "cpp",
+		"typeinfo": "cpp",
+		"variant": "cpp",
+		"iterator": "cpp",
+		"utility": "cpp"
 	}
 }
