--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,8 @@
 		"typeinfo": "cpp",
 		"variant": "cpp",
 		"iterator": "cpp",
-		"utility": "cpp"
+		"utility": "cpp",
+		"__functional_03": "cpp",
+		"__functional_base_03": "cpp"
 	}
 }
