--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
 		"iterator": "cpp",
 		"utility": "cpp",
 		"__functional_03": "cpp",
-		"__functional_base_03": "cpp"
+		"__functional_base_03": "cpp",
+		"__config_site": "cpp"
 	}
 }
