--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,8 @@
 		"utility": "cpp",
 		"__functional_03": "cpp",
 		"__functional_base_03": "cpp",
-		"__config_site": "cpp"
+		"__config_site": "cpp",
+		"version": "cpp",
+		"__undef_macros": "cpp"
 	}
 }
