Fix vector, write bst

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,6 +72,8 @@
 		"__config_site": "cpp",
 		"version": "cpp",
 		"__undef_macros": "cpp",
-		"iomanip": "cpp"
+		"iomanip": "cpp",
+		"__tree": "cpp",
+		"map": "cpp"
 	}
 }
