--- a/srcs/Makefile
+++ b/srcs/Makefile
@@ -1,5 +1,7 @@
 INCS				=	iterator/iterator.hpp iterator/iterator_traits.hpp iterator/reverse_iterator.hpp container/vector.hpp \
-							type_traits/is_integral.hpp type_traits/enable_if.hpp iterator/advance.hpp iterator/distance.hpp
+						type_traits/is_integral.hpp type_traits/enable_if.hpp iterator/advance.hpp iterator/distance.hpp\
+						utility/binary_search_tree.hpp utility/bst_node.hpp utility/pair.hpp utility/make_pair.hpp
+
 SRCS				=	main.cpp
 OBJS				= 	$(patsubst %.cpp, %.o, $(SRCS_FILE))
 SRCS_DIR			=	./
